[package]
name = "hooked"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
http = "1.1"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }